# rust-meson-and-c

./: flake.nix  meson.build
rust/: Cargo.toml  find_rust_obj.sh  meson.build  rust-toolchain.toml
rust/src/: lib.rs
src/: greeting.c  greeting.h  main.c
